# joern

./: .bazelignore  .bazelrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .sbtopts  .scala-steward.conf  .scalafmt.conf  .travis.yml  BUILD  CITATION.cff  CITATION.template  Dockerfile  LICENSE  MODULE.bazel  NEWS.md  README.md  amm-fatter-fansi213.pom  amm-fatter.pom  amm.pom  ast-for-funcs.json  bazel.md  build-website.sh  build.sbt  build.sh  c2cpg.sh  cfg-for-funcs.json  conf  flake.nix  format_maven_install.json  fuzzyc2cpg.sh  ghidra2cpg  import.sh  install.sh  javasrc2cpg  joern  joern-benchmarks  joern-cpg2scpg  joern-export  joern-export.bat  (+45 more)
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: comparison_results.yml  containers.yml  gh_release.yml  goastgen-rust.yml  master.yml  pr.yml  release-from-branch.yml  release-github.yml  release.yml  test_distro.yml  upgrade-deps.yml  upstream_sync.yml
bazel/: filter_runfiles.bzl  java.bzl  scala.bzl
bazel/format/: BUILD
bazel/reexports/: BUILD
bazel/tooling/: MODULE.bazel  java_rule_factory.bzl  scala_rule_factory.bzl
bazel/tooling/platform/: BUILD
bazel/tooling/scala_toolchain/: BUILD  check_version.bzl
benchmarks/: PREAMBLE.md  README.md  build.sbt
changelog/: 2.0.0-scala3.md  4.0.0-flatgraph.md  generalBestPractices.md  passthrough_semantics.md  traversal_removal.md
ci/: Dockerfile.alma  Dockerfile.alma8  Dockerfile.slim
conf/: log4j2.xml
console/: build.sbt
console2/: build.sbt
console3/: amm.pom  build.sbt
console4/: build.sbt
dataflowengineoss/: BUILD  README.md  build.sbt
docs/: README.md  SUMMARY.md  building.html  building.md  codepropertygraph  config.toml  creation.html  creation.md  index.html  kernelexamples.html  kernelexamples.md  kernelexamples2.md  querying.html  querying.md  samples.md  search_index.json  src  testlink.md
docs/content/: _index.md
docs/content/baselanguage/: _index.md
docs/content/building/: _index.md
docs/content/callgraph/: _index.md
docs/content/creation/: _index.md
docs/content/essentials/: _index.md
docs/content/flows/: _index.md
docs/content/importing/: _index.md
docs/content/installing/: _index.md
docs/content/javalib/: _index.md
docs/content/kernelexamples/: _index.md
docs/content/methods/: _index.md
docs/content/querying/: _index.md
docs/content/rest/: _index.md
docs/content/shell/: _index.md
docs/themes/hugo-theme-techdoc/: README.md  gulpfile.js  package.json
docs2/: default.conf  docusaurus.config.js  package.json  sidebars.js
docs2/docs/: c-syntaxtree.mdx  code-property-graph.mdx  export.md  glossary.mdx  home.mdx  installation.mdx  interpreter.mdx  organizing-projects.mdx  quickstart.mdx  server.md  shell.mdx  traversal-basics.mdx  upgrade-guides.mdx
docs2/docs/cpgql/: augmentation-directives.mdx  calls.mdx  (+10 more)
docs2/src/: annotate.js  cpgqlref.js  cpgqlref.test.js  oqlref.js  oqlref.test.js
formats/: build.sbt
fuzzyppcli/: fuzzyppcli
ghidra2cpg-build/: build.sbt
html/: Makefile  package-lock.json
hugodocs/: config.toml
joern-cli/: JOERN_SLICE.md  build.sbt
joern-cli/frontends/gosrc2cpg/rust/: Cargo.toml  README.md
joern-cli/frontends/gosrc2cpg/rust/crates/goastgen-cli/: Cargo.toml
joern-cli/frontends/gosrc2cpg/rust/crates/goastgen-cli/src/: main.rs
joern-cli/frontends/gosrc2cpg/rust/crates/goastgen-cli/tests/: ast_coverage.rs  cli_contract.rs  determinism.rs  differential_json.rs  performance_envelope.rs
joern-cli/frontends/gosrc2cpg/rust/crates/goastgen-core/: Cargo.toml
joern-cli/frontends/gosrc2cpg/rust/crates/goastgen-core/src/: gomod.rs  lib.rs  mapper.rs
joern-cli/frontends/gosrc2cpg/rust/docs/: json-contract.md  release-checklist.md
joern-cli/frontends/gosrc2cpg/rust/fixtures/: README.md
joern-cli/frontends/gosrc2cpg/rust/fixtures/go-corpus/build_tags/: go.mod  linux_only.go  main.go
joern-cli/frontends/gosrc2cpg/rust/fixtures/go-corpus/cgo/: go.mod  main.go
joern-cli/frontends/gosrc2cpg/rust/fixtures/go-corpus/language_features/: go.mod  main.go
joern-cli/frontends/gosrc2cpg/rust/fixtures/go-corpus/module_layout/: go.mod  go.work  main.go
joern-cli/frontends/gosrc2cpg/rust/fixtures/go-corpus/module_layout/nested/: go.mod  nested.go
joern-cli/frontends/gosrc2cpg/rust/fixtures/go-corpus/module_layout/pkg/service/: service.go
joern-server/: build.sbt
joern-server/project/: plugins.sbt
libinfo/: build.sbt
licenses/: lombok
linter-rules/: build.sbt
macros/: build.sbt
project/: DownloadHelper.scala  Environment.scala  ExternalCommandUtil.scala  FileUtils.scala  Frontends.scala  Projects.scala  SbtHelper.scala  SimpleCache.scala  UrlRetry.scala  Utils.scala  Versions.scala  meta-build.sbt  plugins.sbt
project-linter/: build.sbt  readme.md
project-linter/project/: TargetAxis.scala  plugins.sbt
querydb/: README.md  build.sbt
schema-extender/: build.sbt
scripts/: README.md  cfgToDot.scala  list-funcs.scala
scripts/ast-for-funcs/: ast-for-funcs.scala  description.json
scripts/ast-for-funcs-dump/: ast-for-funcs-dump.scala  description.json
scripts/cfg-for-funcs/: cfg-for-funcs.scala  description.json
scripts/cfg-for-funcs-dump/: cfg-for-funcs-dump.scala  description.json
scripts/cfgToDot/: cfgToDot.scala  description.json
scripts/functions-to-dot/: description.json  functions-to-dot.scala
scripts/graph-for-funcs/: description.json  graph-for-funcs.scala
scripts/list-funcs/: description.json  list-funcs.scala
scripts/pdg-for-funcs/: description.json  pdg-for-funcs.scala
scripts/pdg-for-funcs-dump/: description.json  pdg-for-funcs-dump.scala
semanticcpg/: BUILD  build.sbt
semanticcpg2/: build.sbt
slicing/: README.md  build.sbt
tests/: finding-to-sarif-test.sh  frontends-smoketest.sc  frontends-tests.sh  frontends-testscript.sc  loadcpg.sc  querydb-test.sh  scripts-test.sh  smoke-test.sh  test-cpg.sc  test-dependencies.sc  test-main.sc  test-sarif.sc  test-simple.sc  test-sqliteUtils-test.sc  test-sqliteUtils.sc
tests/code/: ghidra  test.c
(+5032 files in other folders)
