module(name = "bazel_tooling")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_scala", version = "7.2.4")
bazel_dep(name = "rules_java", version = "9.6.1")

scala_config = use_extension(
  "@rules_scala//scala/extensions:config.bzl",
  "scala_config",
)
use_repo(scala_config, "rules_scala_config")

