[package]
name = "goastgen"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "goastgen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
goastgen-core = { path = "../goastgen-core" }
ignore.workspace = true
regex.workspace = true

[dev-dependencies]
assert_cmd = "2"
serde_json.workspace = true
tempfile.workspace = true
