[package]
name = "goastgen-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
